# fracada-plutus-starter

./: Fracada.cabal  README.md  commands  run.sh
pab/: Main.hs
src/: Fracada.hs  MintNFT.hs
